# luadseg

./: .gitignore  Makefile  README.md  environment.yaml  pyproject.toml
.github/: copilot-instructions.md
configs/: anorak.yaml
configs/downstream_tasks/: anorak.yaml
configs/encoder/: moco_superpixel_nocluster.yaml  uni2.yaml
configs/prep/: anorak_10x_224_pad.yaml
configs/prep/dhmc/: tiling_224_10x.yaml  tiling_224_20x.yaml
configs/stain_norm/: off.yaml  on.yaml
docs/: mkdocs.yml
docs/docs/: index.md
luadseg/: __init__.py  dataset.py  features.py  plots.py  utils.py
luadseg/data/: constants.py  data.py  pl_data.py  preprocess_validation.py
luadseg/embed/: compute.py  store.py
luadseg/eval/: anorak.py  publish_mlflow.py
luadseg/modeling/: predict.py  train.py
luadseg/models/: foundation_models.py  loaders.py  pl_wrapper.py  utils.py
luadseg/models/segmentation/: encoder_wrapper.py  patseg.py  test_patseg.py
luadseg/prep/anorak/: prepare.py  tile_anorak.py
luadseg/run/: loggers.py  run_anorak.py  utils.py
luadseg/training/: train.py
luadseg/training.py/: train.py
luadseg/visualization/: create_heatmap_dhmc.py
notebooks/: anorak_results_summary.ipynb  compute_anorak_image_statistics.ipynb  compute_anorak_split.ipynb  compute_class_ratio.ipynb  explo_compute_stride.ipynb  explo_pipeline_steps.ipynb  explo_pipeline_steps_448_20x.ipynb  explo_pred_on_dhmc.ipynb  explo_torchstain.ipynb  explo_uni2_architecture.ipynb  make_split_anorak_not_resized.ipynb  make_split_anorak_resized.ipynb
scripts/: launch_mlflow.sh
(+3 files in other folders)
