[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "luadseg"
version = "0.0.1"
description = "benchmark semantic segmentation for luad patterns"
authors = [
  { name = "Valentin Oreiller" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"


[tool.ruff]
line-length = 99
src = ["luadseg"]
include = ["pyproject.toml", "luadseg/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["luadseg"]
force-sort-within-sections = true

